--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						C#
 					</div>
 				</a>
-				<a href="vg1/index.html">
+				<a href="vg2/examples/database.html">
 					<div class="box">
 						Databaser
 					</div>
