--- a/vg1/exercises/ex1.html
+++ b/vg1/exercises/ex1.html
@@ -17,7 +17,7 @@
 		<div class="navigation">
 			<div class="logo">
 				<span class="nav-item" id="logo">
-					<a id="logo" href="../index.html">IM Stord</a>
+					<a id="logo" href="../index.html"><img src="../../resources/images/im_logo_ligg_sv_purple.jpg"></a>
 				</span>
 			</div>
 			<div class="links">
@@ -38,18 +38,23 @@
 		</div>
 	</div>
 	<main>
+		<div class="quick-links">
+			<div class="shortcuts">
+				<a href="../../index.html">Framside</a> > <a href="../index.html">Vg1</a> > <span>Øvingsoppgåve 1</span>
+			</div>
+		</div>
 		<div>
 			<h1>Øvingsoppgåver JavaScript</h1>
 			<div>
 
 
 				<h1>Øving 1</h1>
-				<h4>Mål: Lære å:</h4>
+				<h2>Mål: Lære å:</h2>
 				<ul>
 					<li>Bli kjent med tekst-handtering (string)</li>
 					<li>Bruke if-setningar</li>
 				</ul>
-				<h3>Oppgave a)</h3>
+				<h2>Oppgave a)</h2>
 				<p>Lag et program som gjer følgande: </p>
 
 				<div class="task">
