--- a/vg2/index.html
+++ b/vg2/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +13,7 @@
 </head>
 
 <body>
-	<div class="main-content" >
+	<div class="main-content">
 		<div class="navigation">
 			<div class="logo">
 				<span class="nav-item" id="logo">
@@ -28,98 +29,114 @@
 				</span>
 				<span class="nav-item">
 					<a href="../vg2/index.html">Vg2</a>
-				</span>  
+				</span>
 				<span class="nav-item">
 					<a href="../about.html">Om oss</a>
 				</span>
-				
+
 			</div>
 		</div>
 	</div>
 	<main>
 		<h1 class="subjectHeader">Vg2 Utvikling</h1>
-
-		<div >
-			
+		<div>
 			<div class="grid-container">
 				<div>
 					<div class="subheader">
 						<div class="grid-container-3">
-							<a href="examples/html.html">
+							<a href="../vg2/web.html">
 								<div class="grid-box">
 									HTML / CSS / JS
 								</div>
 							</a>
-							<a href="examples/css.html">
+							<a href="">
 								<div class="grid-box">
 									C#
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a href="../vg2/examples/database.html">
 								<div class="grid-box">
 									Databasar
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a
+								href="https://ndla.no/subject:f41eadfa-0749-4ab4-bc17-a500adad38b8/topic:b560d9d8-e4b1-4f28-b171-9febe1b3c42e/">
 								<div class="grid-box">
 									Personvern
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a href="">
 								<div class="grid-box">
 									Digitale truslar
 								</div>
 							</a>
-							<a href="examples/html.html">
+							<a href="examples/cookies.html">
 								<div class="grid-box">
-									Verktøy
+									Cookies
 								</div>
 							</a>
-							<a href="examples/css.html">
+							<a href="examples/environment.html">
 								<div class="grid-box">
 									Utviklingsmiljø
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a href="">
 								<div class="grid-box">
 									Dokumentasjon
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a
+								href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:0d260948-d2c6-4b8d-9c01-97aac6610961/">
 								<div class="grid-box">
-									Power Apps
+									Universell utforming
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a href="">
 								<div class="grid-box">
 									Rammeverk
 								</div>
 							</a>
 						</div>
 					</div>
-					<div class="subheader task-grid" >
+					<div class="subheader task-grid">
 						<div class="blue-box">
 							<h2>Innleveringer</h2>
 							<ul class="exer">
 								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EZaXJkouSPZJn6v0jGubGMUBfEzLCx4ItcFh_UW8Ebyaqw?e=CcYD7f" target="_blank">01 - Nettbutikk</a>
+									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EQE1j2wDCvNJtTDbTbe-7IABpPRRTppxrp37QISC1APhjg?e=YczkMx"
+										target="_blank">01 - Databasar
+									</a>
 								</li>
 								<hr />
 								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EStVw5MTWKlJgxv-xDLX3zMBB4Tr22-xNnA2XufDsExHtA?e=XlBmsy">02 - Nettside for IM</a>
+									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EQ9-y9NBC91OsY5Huq2_UmoBC0bxOPR7TkhwxYEEz7qCQA?e=aDvFEV"
+										target="_blank">02 - Webapplikasjonar og databasar
+									</a>
 								</li>
 								<hr />
 								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EeVHmhdDHdxNhk-4hmaydoYBLEqcNYzPOJw3Vg-DIldSnQ?e=hcBrAa">03 - Min portefølje</a>
+									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EbULk8Sv7CRJtMvAIEjrOBIBSmQiYtD0zEBSHpSOw7mTwQ?e=6ygSm9"
+										target="_blank"> 03 - Power Apps
+									</a>
 								</li>
 								<hr />
 								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EeVHmhdDHdxNhk-4hmaydoYBLEqcNYzPOJw3Vg-DIldSnQ?e=hcBrAa">04 - Min portefølje</a>
+									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EfVqivNggQtAlIr_DMqCWVwBEfvLlk4RMxWxlI2Pmg-VXA?e=PBdcwj"
+										target="_blank">04 - Spel
+									</a>
 								</li>
 								<hr />
 								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EeVHmhdDHdxNhk-4hmaydoYBLEqcNYzPOJw3Vg-DIldSnQ?e=hcBrAa">05 - Min portefølje</a>
-								</li>						
+									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EfxZH9BkgRxBgOsneDSuRoIBDxIr130rT2iwT-tvY4bYoQ?e=grlpEh"
+										target="_blank">05 - Gruppeoppgåve - Digitale truslar
+									</a>
+								</li>
+								<hr />
+								<li>
+									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/ESofSXzcMGlBi15i8jskX0kBP38mooTOuqpqizeTnKb15Q?e=8SCnIC"
+										target="_blank"> 06 - IM Chat
+									</a>
+								</li>
 							</ul>
 						</div>
 						<div class="blue-box">
@@ -127,7 +144,8 @@
 							<h3>HTML / CSS / JS</h3>
 							<ul class="exer">
 								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EZaXJkouSPZJn6v0jGubGMUBfEzLCx4ItcFh_UW8Ebyaqw?e=CcYD7f" target="_blank">01 - Nettbutikk</a>
+									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EZaXJkouSPZJn6v0jGubGMUBfEzLCx4ItcFh_UW8Ebyaqw?e=CcYD7f"
+										target="_blank">01 - Nettbutikk</a>
 								</li>
 								<hr />
 								<li>
@@ -137,7 +155,8 @@
 							<h3>C#</h3>
 							<ul class="exer">
 								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EZaXJkouSPZJn6v0jGubGMUBfEzLCx4ItcFh_UW8Ebyaqw?e=CcYD7f" target="_blank">01 - Nettbutikk</a>
+									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EZaXJkouSPZJn6v0jGubGMUBfEzLCx4ItcFh_UW8Ebyaqw?e=CcYD7f"
+										target="_blank">01 - Nettbutikk</a>
 								</li>
 								<hr />
 								<li>
@@ -147,7 +166,8 @@
 							<h3>Databasar</h3>
 							<ul class="exer">
 								<li>
-									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EZaXJkouSPZJn6v0jGubGMUBfEzLCx4ItcFh_UW8Ebyaqw?e=CcYD7f" target="_blank">01 - Nettbutikk</a>
+									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EZaXJkouSPZJn6v0jGubGMUBfEzLCx4ItcFh_UW8Ebyaqw?e=CcYD7f"
+										target="_blank">01 - Nettbutikk</a>
 								</li>
 								<hr />
 								<li>
@@ -155,32 +175,40 @@
 								</li>
 							</ul>
 						</div>
-						
+
 					</div>
 				</div>
 				<div class="blue-box" id="links-right">
 					<h2>Lenker:</h2>
 					<ul>
 						<li>
-							<a href="">Kompetansemål (Udir)</a>
+							<a href="https://www.udir.no/lk20/itk02-01/kompetansemaal-og-vurdering/kv374">Kompetansemål
+								(Udir)</a>
 						</li>
 						<li>
-							<a href="">It's Learning</a>
+							<a href="https://vlfk.itslearning.com">It's Learning</a>
 						</li>
 						<li>
-							<a href="">NDLA.no</a>
+							<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e">NDLA.no</a>
 						</li>
 						<li>
-							<a href="">OneNote</a>
+							<a href="https://firebase.google.com/">Google Firebase</a>
 						</li>
 						<li>
-							<a href="">W3Schools</a>
+							<a
+								href="https://vlfksky.sharepoint.com/sites/Section_22-23_STO_fg_2ITKA-ITK2003_12025426/_layouts/OneNote.aspx?id=%2Fsites%2FSection_22-23_STO_fg_2ITKA-ITK2003_12025426%2FSiteAssets%2F2ITKA_ITK2003%20ved%20STO%20Notatblokk&wd=target%28_Innholdsbibliotek%2FFagstoff.one%7CDBE903FA-ECEE-442D-93DF-B2151E939C07%2F%29%20onenote:https://vlfksky.sharepoint.com/sites/Section_22-23_STO_fg_2ITKA-ITK2003_12025426/SiteAssets/2ITKA_ITK2003%20ved%20STO%20Notatblokk/_Innholdsbibliotek/Fagstoff.one#section-id=%7BDBE903FA-ECEE-442D-93DF-B2151E939C07%7D&end">OneNote</a>
+						</li>
+						<li>
+							<a href="https://www.w3schools.com/tags/default.asp">W3Schools</a>
+						</li>
+						<li>
+							<a href="https://make.powerapps.com/">Power Apps </a>
 						</li>
 					</ul>
 				</div>
-	
+
 			</div>
-			
+
 		</div>
 	</main>
 	<footer>
@@ -189,4 +217,5 @@
 
 	<script type="text/javascript" src="../resources/js/year.js"></script>
 </body>
+
 </html>
