--- a/vg1/index.html
+++ b/vg1/index.html
@@ -60,32 +60,32 @@
 									JS
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e08eecc8-5e7e-4b85-9876-dfc5d1f3d920/">
 								<div class="grid-box">
-									Python
+									Programmering
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a href="https://make.powerapps.com">
 								<div class="grid-box">
 									Power Apps
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:5477d24d-99ce-48c6-a9e5-f233ab791e63/">
 								<div class="grid-box">
-									Personvern
+									Regelverk
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:543dde0c-c349-4b87-8e17-2bd95f291863/">
 								<div class="grid-box">
 									Databaser
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:9b328b18-c4d4-446c-a3a4-b69dccecda45/">
 								<div class="grid-box">
 									Prototyping
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e48b7498-b2d3-4ad0-b797-bd153728ad47/">
 								<div class="grid-box">
 									Dokumentasjon
 								</div>
