--- a/vg2/examples/cookies.html
+++ b/vg2/examples/cookies.html
@@ -89,10 +89,11 @@
               <p>Cookien blir derfor: <span class="code">"username"=Stine;30;path=/</span></p>
               <h2>Hente cookie</h2>
               <p> I koden under henter den en cookie: </p>
-              <img src="../../resources/images/codesnippets/cookie2.jpg">
+              <img src="../../resources/images/codesnippets/cookie2.JPG">
               <p>Denne koden tar inn en parameter <span class="code">cname</span> som er navnet på cookien den skal finne i nettleseren. </p>
               <p>I dette tilfellet er det <span class="code">"username"</span></p>
               <p>Denne koden bruker ulike <span>string</span>metoder for å splitte teksten i cookien</p>
+              <a href="cookieexample.html">Eksempel</a>
             </div>
           </div>
 
