--- a/vg1/index.html
+++ b/vg1/index.html
@@ -4,39 +4,56 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Heim</title>
-	<link rel="stylesheet" href="../resources/css/main.css">
-	<link rel="stylesheet" href="../resources/css/subject.css">
-	<link rel="stylesheet" href="../resources/css/exercises.css">
-
-
+	<title>Vg1 - Heim</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/resources/css/main.css">
+	<link rel="stylesheet" href="/resources/css/subject.css">
+	<link rel="stylesheet" href="/resources/css/exercises.css">
 </head>
 
 <body>
-	<div class="main-content">
+	<div>
 		<div class="navigation">
 			<div class="logo">
 				<span class="nav-item" id="logo">
-					<a id="logo" href="../index.html"><img src="../resources/images/im_logo_ligg_sv_purple.jpg"></a>
+					<a id="logo" href="/index.html"><img src="/resources/images/im_logo_ligg_sv_invert2.png"></a>
 				</span>
 			</div>
 			<div class="links">
 				<span class="nav-item">
-					<a href="../index.html">Heim</a>
+					<a href="/index.html">Heim</a>
 				</span>
 				<span class="nav-item">
-					<a href="../vg1/index.html">Vg1</a>
+					<a href="/vg1/index.html">Vg1</a>
+				</span>
+				<span class="nav-item dropdown"><a href="/vg2/index.html">Vg2</a>
+					<i class="fa fa-caret-down"></i>
+					<div class="dropdown-content">
+						<a href="/vg2/web.html">HTML / CSS / JS</a>
+						<a href="#">C#</a>
+						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:c06064a8-54b1-4e75-b154-b3fa7b01d225/"
+							target="_blank">Python</a>
+						<a href="/vg2/examples/database.html">Databasar</a>
+						<a href="https://ndla.no/subject:f41eadfa-0749-4ab4-bc17-a500adad38b8/topic:b560d9d8-e4b1-4f28-b171-9febe1b3c42e/"
+							target="_blank">Personvern</a>
+						<a href="/vg2/examples/cookies.html">Cookies</a>
+						<a href="/vg2/examples/environment.html">Utviklingsmiljø</a>
+						<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e48b7498-b2d3-4ad0-b797-bd153728ad47/"
+							target="_blank">Dokumentasjon</a>
+						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:0d260948-d2c6-4b8d-9c01-97aac6610961/"
+							target="_blank">Universell utforming</a>
+						<a href="/vg2/examples/versioncontrol.html">Versjonskontroll</a>
+					</div>
+				</span>
 				</span>
 				<span class="nav-item">
-					<a href="../vg2/index.html">Vg2</a>
-				</span>
-				<span class="nav-item">
-					<a href="../about.html">Om oss</a>
+					<a href="/about.html">Om oss</a>
 				</span>
 
 			</div>
 		</div>
 	</div>
+
 	<main>
 		<div>
 			<h1 class="subjectHeader">Vg1 Konseptutvikling og programmering</h1>
@@ -60,7 +77,8 @@
 									JS
 								</div>
 							</a>
-							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e08eecc8-5e7e-4b85-9876-dfc5d1f3d920/">
+							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e08eecc8-5e7e-4b85-9876-dfc5d1f3d920/"
+								target="_blank">
 								<div class="grid-box">
 									Programmering
 								</div>
@@ -70,22 +88,26 @@
 									Power Apps
 								</div>
 							</a>
-							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:5477d24d-99ce-48c6-a9e5-f233ab791e63/">
+							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:5477d24d-99ce-48c6-a9e5-f233ab791e63/"
+								target="_blank">
 								<div class="grid-box">
 									Regelverk
 								</div>
 							</a>
-							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:543dde0c-c349-4b87-8e17-2bd95f291863/">
+							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:543dde0c-c349-4b87-8e17-2bd95f291863/"
+								target="_blank">
 								<div class="grid-box">
 									Databaser
 								</div>
 							</a>
-							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:9b328b18-c4d4-446c-a3a4-b69dccecda45/">
+							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:9b328b18-c4d4-446c-a3a4-b69dccecda45/"
+								target="_blank">
 								<div class="grid-box">
 									Prototyping
 								</div>
 							</a>
-							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e48b7498-b2d3-4ad0-b797-bd153728ad47/">
+							<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e48b7498-b2d3-4ad0-b797-bd153728ad47/"
+								target="_blank">
 								<div class="grid-box">
 									Dokumentasjon
 								</div>
@@ -181,7 +203,7 @@
 					</div>
 				</div>
 				<div>
-					<div class="blue-box" id="links-right">
+					<div class="blue-box links-right">
 						<h2>Lenker:</h2>
 						<ul>
 							<li>
@@ -201,7 +223,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="blue-box" id="links-right">
+					<div class="blue-box links-right">
 						<h2>!Viktig å huske på:!</h2>
 						<ul>
 							<li>
