--- a/index.html
+++ b/index.html
@@ -5,36 +5,54 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Heim</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="resources/css/main.css">
 	<link rel="stylesheet" href="resources/css/index.css">
-
 </head>
 
 <body>
-	<div class="main-content">
-
+	<div>
 		<div class="navigation">
 			<div class="logo">
 				<span class="nav-item" id="logo">
-					<a id="logo" href="../index.html"><img src="../resources/images/im_logo_ligg_sv_purple.jpg"></a>
+					<a id="logo" href="../index.html"><img src="../resources/images/im_logo_ligg_sv_invert2.png"></a>
 				</span>
 			</div>
 			<div class="links">
 				<span class="nav-item">
-					<a href="index.html">Heim</a>
+					<a href="../index.html">Heim</a>
 				</span>
 				<span class="nav-item">
-					<a href="vg1/index.html">Vg1</a>
+					<a href="../vg1/index.html">Vg1</a>
+				</span>
+				<span class="nav-item dropdown"><a href="../vg2/index.html">Vg2</a>
+					<i class="fa fa-caret-down"></i>
+					<div class="dropdown-content">
+						<a href="../vg2/web.html">HTML / CSS / JS</a>
+						<a href="#">C#</a>
+						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:c06064a8-54b1-4e75-b154-b3fa7b01d225/"
+							target="_blank">Python</a>
+						<a href="../vg2/examples/database.html">Databasar</a>
+						<a href="https://ndla.no/subject:f41eadfa-0749-4ab4-bc17-a500adad38b8/topic:b560d9d8-e4b1-4f28-b171-9febe1b3c42e/"
+							target="_blank">Personvern</a>
+						<a href="examples/cookies.html">Cookies</a>
+						<a href="examples/environment.html">Utviklingsmiljø</a>
+						<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e48b7498-b2d3-4ad0-b797-bd153728ad47/"
+							target="_blank">Dokumentasjon</a>
+						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:0d260948-d2c6-4b8d-9c01-97aac6610961/"
+							target="_blank">Universell utforming</a>
+						<a href="examples/versioncontrol.html">Versjonskontroll</a>
+					</div>
+				</span>
 				</span>
 				<span class="nav-item">
-					<a href="vg2/index.html">Vg2</a>
+					<a href="../about.html">Om oss</a>
 				</span>
-				<span class="nav-item">
-					<a href="about.html">Om oss</a>
-				</span>
+
 			</div>
 		</div>
-
+	</div>
+	<div class="main-content">
 		<div class="header">
 			<h1>IM Stord vgs</h1>
 			<div class="grid-container">
@@ -49,42 +67,6 @@
 					</div>
 				</a>
 			</div>
-			<h2 class="subjectHeader">Tema:</h2>
-
-			<div class="box-container">
-				<a href="vg1/index.html">
-					<div class="box">
-						<span class="header">HTML / CSS</span>
-					</div>
-				</a>
-				<a href="vg2/index.html">
-					<div class="box">
-						JavaScript
-					</div>
-				</a>
-				<a href="vg1/index.html">
-					<div class="box">
-						Python
-					</div>
-				</a>
-				<a href="vg2/index.html">
-					<div class="box">
-						C#
-					</div>
-				</a>
-				<a href="vg2/examples/database.html">
-					<div class="box">
-						Databaser
-					</div>
-				</a>
-				<a href="vg2/index.html">
-					<div class="box">
-						Power Apps
-					</div>
-				</a>
-
-			</div>
-
 		</div>
 
 
