--- a/vg1/examples/jsv2.html
+++ b/vg1/examples/jsv2.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Heim</title>
-    <link rel="stylesheet" href="../../resources/css/main.css">
-    <link rel="stylesheet" href="../../resources/css/subject.css">
-    <link rel="stylesheet" href="../../resources/css/exercises.css">
+    <link rel="stylesheet" href="/resources/css/main.css">
+    <link rel="stylesheet" href="/resources/css/subject.css">
+    <link rel="stylesheet" href="/resources/css/exercises.css">
 
     <style>
         .subjectboxes .card {
             padding: 20px;
-            background-color: rgb(165, 42, 42);
+            background-color: rgb(167, 155, 206);
             margin-right: 20px;
             display: inline-block;
             border-radius: 5px;
@@ -23,41 +23,54 @@
             color: white;
             font-size: larger;
         }
-
-        .subjectboxes .card:hover {
-            background-color: rgba(165, 42, 42, 0.8);
-        }
     </style>
 </head>
 
 <body>
-    <div class="main-content">
-        <div class="navigation">
-            <div class="logo">
-                <span class="nav-item" id="logo">
-                    <a id="logo" href="../index.html">IM Stord</a>
-                </span>
-            </div>
-            <div class="links">
-                <span class="nav-item">
-                    <a href="../index.html">Heim</a>
-                </span>
-                <span class="nav-item">
-                    <a href="../../vg1/index.html">Vg1</a>
-                </span>
-                <span class="nav-item">
-                    <a href="../vg2/index.html">Vg2</a>
-                </span>
-                <span class="nav-item">
-                    <a href="../about.html">Om oss</a>
-                </span>
+    <div>
+		<div class="navigation">
+			<div class="logo">
+				<span class="nav-item" id="logo">
+					<a id="logo" href="/index.html"><img src="/resources/images/im_logo_ligg_sv_invert2.png"></a>
+				</span>
+			</div>
+			<div class="links">
+				<span class="nav-item">
+					<a href="/index.html">Heim</a>
+				</span>
+				<span class="nav-item">
+					<a href="/vg1/index.html">Vg1</a>
+				</span>
+				<span class="nav-item dropdown"><a href="/vg2/index.html">Vg2</a>
+					<i class="fa fa-caret-down"></i>
+					<div class="dropdown-content">
+						<a href="/vg2/web.html">HTML / CSS / JS</a>
+						<a href="#">C#</a>
+						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:c06064a8-54b1-4e75-b154-b3fa7b01d225/"
+							target="_blank">Python</a>
+						<a href="/vg2/examples/database.html">Databasar</a>
+						<a href="https://ndla.no/subject:f41eadfa-0749-4ab4-bc17-a500adad38b8/topic:b560d9d8-e4b1-4f28-b171-9febe1b3c42e/"
+							target="_blank">Personvern</a>
+						<a href="/vg2/examples/cookies.html">Cookies</a>
+						<a href="/vg2/examples/environment.html">Utviklingsmiljø</a>
+						<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e48b7498-b2d3-4ad0-b797-bd153728ad47/"
+							target="_blank">Dokumentasjon</a>
+						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:0d260948-d2c6-4b8d-9c01-97aac6610961/"
+							target="_blank">Universell utforming</a>
+						<a href="/vg2/examples/versioncontrol.html">Versjonskontroll</a>
+					</div>
+				</span>
+				</span>
+				<span class="nav-item">
+					<a href="/about.html">Om oss</a>
+				</span>
 
-            </div>
-        </div>
-    </div>
+			</div>
+		</div>
+	</div>
     <main>
         
-        <h1>Vg1 Informasjonsteknologi og medieproduksjon</h1>
+        <h1 class="subjectHeader">Webutvikling</h1>
         <h2>Tema:</h2>
 
         <h2>HTML:</h2>
