--- a/vg2/examples/cookies.html
+++ b/vg2/examples/cookies.html
@@ -5,40 +5,61 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Heim</title>
-  <link rel="stylesheet" href="../../resources/css/main.css">
-  <link rel="stylesheet" href="../../resources/css/examples.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/resources/css/main.css">
+  <link rel="stylesheet" href="/resources/css/examples.css">
 </head>
 
 <body>
-  <div class="main-content">
-    <div class="navigation">
-      <div class="logo">
-        <span class="nav-item" id="logo">
-          <a id="logo" href="../index.html"><img src="../../resources/images/im_logo_ligg_sv_purple.jpg"></a>
-        </span>
-      </div>
-      <div class="links">
-        <span class="nav-item">
-          <a href="../index.html">Heim</a>
-        </span>
-        <span class="nav-item">
-          <a href="../index.html">Vg1</a>
-        </span>
-        <span class="nav-item">
-          <a href="../vg2/index.html">Vg2</a>
-        </span>
-        <span class="nav-item">
-          <a href="../about.html">Info</a>
-        </span>
+  <div>
+		<div class="navigation">
+			<div class="logo">
+				<span class="nav-item" id="logo">
+					<a id="logo" href="/index.html"><img src="/resources/images/im_logo_ligg_sv_invert2.png"></a>
+				</span>
+			</div>
+			<div class="links">
+				<span class="nav-item">
+					<a href="/index.html">Heim</a>
+				</span>
+				<span class="nav-item">
+					<a href="/vg1/index.html">Vg1</a>
+				</span>
+				<span class="nav-item dropdown"><a href="/vg2/index.html">Vg2</a>
+					<i class="fa fa-caret-down"></i>
+					<div class="dropdown-content">
+						<a href="/vg2/web.html">HTML / CSS / JS</a>
+						<a href="#">C#</a>
+						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:c06064a8-54b1-4e75-b154-b3fa7b01d225/"
+							target="_blank">Python</a>
+						<a href="/vg2/examples/database.html">Databasar</a>
+						<a href="https://ndla.no/subject:f41eadfa-0749-4ab4-bc17-a500adad38b8/topic:b560d9d8-e4b1-4f28-b171-9febe1b3c42e/"
+							target="_blank">Personvern</a>
+						<a href="/vg2/examples/cookies.html">Cookies</a>
+						<a href="/vg2/examples/environment.html">Utviklingsmiljø</a>
+						<a href="https://ndla.no/subject:1:1352b19e-e706-4480-a728-c6b0a57ba8ae/topic:1:e48b7498-b2d3-4ad0-b797-bd153728ad47/"
+							target="_blank">Dokumentasjon</a>
+						<a href="https://ndla.no/subject:5e53694a-c8eb-4871-8558-71523941c28e/topic:0d260948-d2c6-4b8d-9c01-97aac6610961/"
+							target="_blank">Universell utforming</a>
+						<a href="/vg2/examples/versioncontrol.html">Versjonskontroll</a>
+					</div>
+				</span>
+				</span>
+				<span class="nav-item">
+					<a href="/about.html">Om oss</a>
+				</span>
 
-      </div>
-    </div>
+			</div>
+		</div>
+	</div>
+  <div class="main-content">
+   
     <main>
 
       <div class="grid-container-nolinks">
         <div class="quick-links-not-fixed">
           <div class="shortcuts">
-            <a href="../../index.html">Framside</a> > <a href="../../vg2/index.html">Vg2</a> > <span>Cookies</span>
+            <a href="/index.html">Framside</a> > <a href="/vg2/index.html">Vg2</a> > <span>Cookies</span>
           </div>
         </div>
         <div class="grid-content">
@@ -75,12 +96,12 @@
               <p>I koden under sjekker man om nettleseren har en cookie som heter "username" </p>
               <p>Dersom den ikke har det, oppretter man en ved hjelp av metoden <span class="code">setCookie()</span></p>
               <p>Då får me opp ein alert-boks hvor brukeren får skrive inn navnet sitt. Denne blir lagret som variabelen <span class="code">user</span></p>
-              <img src="../../resources/images/codesnippets/cookie3.JPG">
+              <img src="/resources/images/codesnippets/cookie3.JPG">
               <p><span class="code">setCookie("username", user, 30)</span> seier noko om kva navnet til cookien er, kva verdi den skal ha og kor lenge den skal vare.</p>
               <p>Sjå opprette cookie for nærmare info.</p>
               <h2>Opprette cookie </h2>
               <p>I koden under oppretter den en cookie: </p>
-              <img src="../../resources/images/codesnippets/cookie1.JPG">
+              <img src="/resources/images/codesnippets/cookie1.JPG">
               <p><span class="code">cname</span> er navnet på cookien</p>
               <p><span class="code">cvalue</span> er verdien til cookien</p>
               <p><span class="code">exdays</span> er utløpsdatoen til cookien</p>
@@ -89,7 +110,7 @@
               <p>Cookien blir derfor: <span class="code">"username"=Stine;30;path=/</span></p>
               <h2>Hente cookie</h2>
               <p> I koden under henter den en cookie: </p>
-              <img src="../../resources/images/codesnippets/cookie2.JPG">
+              <img src="/resources/images/codesnippets/cookie2.JPG">
               <p>Denne koden tar inn en parameter <span class="code">cname</span> som er navnet på cookien den skal finne i nettleseren. </p>
               <p>I dette tilfellet er det <span class="code">"username"</span></p>
               <p>Denne koden bruker ulike <span>string</span>metoder for å splitte teksten i cookien</p>
@@ -108,7 +129,7 @@
     <p>&#169; <span id="year"></span> Stine Jonassen Føyen </p>
   </footer>
 
-  <script type="text/javascript" src="../../resources/js/year.js"></script>
+  <script type="text/javascript" src="/resources/js/year.js"></script>
 </body>
 
 </html>
